[gd_scene load_steps=59 format=3 uid="uid://cf5ab8q45yaqr"]

[ext_resource type="Script" uid="uid://el1asfi0gvhd" path="res://game/game/slime/slime.gd" id="1_w8pft"]
[ext_resource type="Texture2D" uid="uid://caugac54jxbkm" path="res://ASSETS/sprites/slime/idle.png" id="1_y2vlo"]
[ext_resource type="Texture2D" uid="uid://drswgsys46413" path="res://ASSETS/sprites/slime/jump.png" id="2_r6ugr"]
[ext_resource type="Texture2D" uid="uid://cpjj2r2wq57pa" path="res://ASSETS/sprites/slime/SlimeDeath.png" id="2_rnv5r"]
[ext_resource type="Texture2D" uid="uid://b7pdnaq0iangd" path="res://ASSETS/sprites/slime/SlimeHurt.png" id="3_pgdth"]
[ext_resource type="Texture2D" uid="uid://c26tlum7sb0sy" path="res://ASSETS/sprites/slime/spawn.png" id="3_r6ugr"]
[ext_resource type="PackedScene" uid="uid://t1llkwtqjrew" path="res://game/game/z_index_manager.tscn" id="5_4c8a6"]
[ext_resource type="PackedScene" path="res://game/game/damage/target.tscn" id="6_doswg"]

[sub_resource type="AtlasTexture" id="AtlasTexture_wxyuf"]
atlas = ExtResource("2_rnv5r")
region = Rect2(0, 0, 40, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_darkn"]
atlas = ExtResource("2_rnv5r")
region = Rect2(40, 0, 40, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_xkwan"]
atlas = ExtResource("2_rnv5r")
region = Rect2(80, 0, 40, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_w1tbt"]
atlas = ExtResource("2_rnv5r")
region = Rect2(120, 0, 40, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_k8c2o"]
atlas = ExtResource("2_rnv5r")
region = Rect2(0, 50, 40, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_o5bbg"]
atlas = ExtResource("2_rnv5r")
region = Rect2(40, 50, 40, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_ku8lc"]
atlas = ExtResource("2_rnv5r")
region = Rect2(80, 50, 40, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_kpblb"]
atlas = ExtResource("2_rnv5r")
region = Rect2(120, 50, 40, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_ep77y"]
atlas = ExtResource("2_rnv5r")
region = Rect2(0, 100, 40, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_1msxr"]
atlas = ExtResource("3_pgdth")
region = Rect2(0, 0, 40, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_ti0my"]
atlas = ExtResource("3_pgdth")
region = Rect2(40, 0, 40, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_5odcf"]
atlas = ExtResource("3_pgdth")
region = Rect2(80, 0, 40, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_h13do"]
atlas = ExtResource("3_pgdth")
region = Rect2(0, 50, 40, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_kt14q"]
atlas = ExtResource("3_pgdth")
region = Rect2(40, 50, 40, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_lauqb"]
atlas = ExtResource("3_pgdth")
region = Rect2(80, 50, 40, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_4c8a6"]
atlas = ExtResource("1_y2vlo")
region = Rect2(0, 0, 30, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_doswg"]
atlas = ExtResource("1_y2vlo")
region = Rect2(30, 0, 30, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_v3v46"]
atlas = ExtResource("1_y2vlo")
region = Rect2(60, 0, 30, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_wrei1"]
atlas = ExtResource("1_y2vlo")
region = Rect2(0, 50, 30, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_rnv5r"]
atlas = ExtResource("2_r6ugr")
region = Rect2(0, 0, 30, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_pgdth"]
atlas = ExtResource("2_r6ugr")
region = Rect2(30, 0, 30, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_f58ax"]
atlas = ExtResource("2_r6ugr")
region = Rect2(60, 0, 30, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_3j5bl"]
atlas = ExtResource("2_r6ugr")
region = Rect2(0, 50, 30, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_aofnk"]
atlas = ExtResource("2_r6ugr")
region = Rect2(30, 50, 30, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_rgrn2"]
atlas = ExtResource("2_r6ugr")
region = Rect2(60, 50, 30, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_m0rbg"]
atlas = ExtResource("2_r6ugr")
region = Rect2(0, 100, 30, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_l0jed"]
atlas = ExtResource("3_r6ugr")
region = Rect2(0, 0, 30, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_1j4xl"]
atlas = ExtResource("3_r6ugr")
region = Rect2(30, 0, 30, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_akesw"]
atlas = ExtResource("3_r6ugr")
region = Rect2(60, 0, 30, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_74iqv"]
atlas = ExtResource("3_r6ugr")
region = Rect2(90, 0, 30, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_jrewy"]
atlas = ExtResource("3_r6ugr")
region = Rect2(120, 0, 30, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_5xv3d"]
atlas = ExtResource("3_r6ugr")
region = Rect2(0, 50, 30, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_oklrb"]
atlas = ExtResource("3_r6ugr")
region = Rect2(30, 50, 30, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_3a5lk"]
atlas = ExtResource("3_r6ugr")
region = Rect2(60, 50, 30, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_i00hp"]
atlas = ExtResource("3_r6ugr")
region = Rect2(90, 50, 30, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_qn4wb"]
atlas = ExtResource("3_r6ugr")
region = Rect2(120, 50, 30, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_ou4j2"]
atlas = ExtResource("3_r6ugr")
region = Rect2(0, 100, 30, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_lifbg"]
atlas = ExtResource("3_r6ugr")
region = Rect2(30, 100, 30, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_mjus5"]
atlas = ExtResource("3_r6ugr")
region = Rect2(60, 100, 30, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_yh7c0"]
atlas = ExtResource("3_r6ugr")
region = Rect2(90, 100, 30, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_j00xt"]
atlas = ExtResource("3_r6ugr")
region = Rect2(120, 100, 30, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_k6rfp"]
atlas = ExtResource("3_r6ugr")
region = Rect2(0, 150, 30, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_natel"]
atlas = ExtResource("3_r6ugr")
region = Rect2(30, 150, 30, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_pynhr"]
atlas = ExtResource("3_r6ugr")
region = Rect2(60, 150, 30, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_h8okv"]
atlas = ExtResource("3_r6ugr")
region = Rect2(90, 150, 30, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_0r8xn"]
atlas = ExtResource("3_r6ugr")
region = Rect2(120, 150, 30, 50)

[sub_resource type="SpriteFrames" id="SpriteFrames_l0jed"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wxyuf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_darkn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xkwan")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w1tbt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k8c2o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o5bbg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ku8lc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kpblb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ep77y")
}],
"loop": true,
"name": &"Death",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1msxr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ti0my")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5odcf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h13do")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kt14q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lauqb")
}],
"loop": true,
"name": &"Hurt",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4c8a6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_doswg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v3v46")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wrei1")
}],
"loop": true,
"name": &"Idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rnv5r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pgdth")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f58ax")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3j5bl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aofnk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rgrn2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m0rbg")
}],
"loop": false,
"name": &"Jump",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l0jed")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1j4xl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_akesw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_74iqv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jrewy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5xv3d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oklrb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3a5lk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i00hp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qn4wb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ou4j2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lifbg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mjus5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yh7c0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j00xt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k6rfp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_natel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pynhr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h8okv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0r8xn")
}],
"loop": false,
"name": &"Spawn",
"speed": 12.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1j4xl"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_w8pft"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 2
properties/1/path = NodePath(".:is_spawning")
properties/1/spawn = true
properties/1/replication_mode = 2
properties/2/path = NodePath("Anim:animation")
properties/2/spawn = true
properties/2/replication_mode = 2

[sub_resource type="CircleShape2D" id="CircleShape2D_4c8a6"]
radius = 28.0179

[node name="Slime" type="CharacterBody2D"]
script = ExtResource("1_w8pft")
jumpCooldown = 0.7
damage = 12

[node name="Anim" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -25)
sprite_frames = SubResource("SpriteFrames_l0jed")
animation = &"Hurt"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -10)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_1j4xl")

[node name="ZIndexManager" parent="." instance=ExtResource("5_4c8a6")]

[node name="Target" parent="." instance=ExtResource("6_doswg")]
maxHealth = 20
affiliation = 1

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_w8pft")

[node name="AttackArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(0, -9)
shape = SubResource("CircleShape2D_4c8a6")

[connection signal="animation_finished" from="Anim" to="." method="_on_anim_animation_finished"]
[connection signal="onDamage" from="Target" to="." method="_on_target_on_damage"]
[connection signal="onDeath" from="Target" to="." method="_on_target_on_death"]
